--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
     <description>Allows users to authenticate with a Tiki token.</description>
     <author>Tiki Wiki CMS Groupware</author>
     <version>${project.version}</version>
-    <date>04/24/2017</date>
+    <date>2023-11-20</date>
     <url>https://dev.tiki.org/OpenFire</url>
     <minServerVersion>4.1.3</minServerVersion>
     <licenseType>gpl</licenseType>
